# ferricast

./: Cargo.toml  README.md  \  flake.nix
.cargo/: config.toml
crates/airplay/: Cargo.toml
crates/airplay/src/: discovery.rs  lib.rs  session.rs
crates/capture/: Cargo.toml
crates/capture/src/: encoder.rs  lib.rs  native.rs  pipewire.rs  pipewire_audio.rs  wayland_direct.rs  wayland_thumb.rs  wlroots_enum.rs  x11.rs  x11_enum.rs
crates/capture/src/pipewire/: format.rs  mod.rs  portal.rs  stream.rs
crates/capture/src/pipewire/vulkan/: format.rs  import.rs  init.rs  mod.rs  modifiers.rs
crates/chromecast/: Cargo.toml
crates/chromecast/examples/: probe_mdns.rs
crates/chromecast/src/: castv2.rs  discovery.rs  h264_params.rs  lib.rs  self_filter.rs  session.rs  wire.rs
crates/chromecast/src/receiver/: advertiser.rs  control.rs  mod.rs  tls.rs  util.rs
crates/core/: Cargo.toml
crates/core/src/: adaptive.rs  advertiser.rs  capture.rs  control.rs  decoder.rs  device.rs  discovery.rs  encoder.rs  error.rs  frame.rs  lib.rs  net.rs  protocol.rs  puller.rs  session.rs  sink.rs  source.rs
crates/dbus/: Cargo.toml
crates/dbus/src/: lib.rs
crates/dbus/tests/: wire_smoke.rs
crates/dbus/xml/: rs.sergioribera.ferricast.Manager1.xml
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs  nvdec.rs
crates/decoder/src/aac/: mod.rs
crates/decoder/src/h264/: mod.rs  openh264_impl.rs  vaapi_impl.rs
crates/decoder/src/h265/: mod.rs  vaapi_impl.rs
crates/dial/: Cargo.toml
crates/dial/src/: discovery.rs  lib.rs  session.rs
crates/encoder/: Cargo.toml
crates/encoder/src/: h264.rs  lib.rs  nvenc.rs
crates/encoder/src/aac/: fdk_impl.rs  mod.rs
crates/encoder/src/h264/: bitstream.rs  headers.rs  mod.rs  nvenc_impl.rs  openh264_impl.rs  vaapi_impl.rs  x264_impl.rs  yuv.rs
crates/encoder/src/h265/: bitstream.rs  headers.rs  mod.rs  vaapi_impl.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  cli.rs  client.rs  daemon.rs  main.rs  picker.rs  receiver_window.rs
crates/hls/: Cargo.toml
crates/hls/src/: http.rs  lib.rs  ring.rs  segmenter.rs  stats.rs  tls.rs
crates/hls/src/puller/: mod.rs  ts.rs
crates/hls/tests/: demux_round_trip.rs  end_to_end.rs
crates/m3u8/: Cargo.toml
crates/m3u8/src/: lib.rs
crates/miracast/: Cargo.toml
crates/miracast/src/: discovery.rs  lib.rs  session.rs
crates/muxer/: Cargo.toml
crates/muxer/src/: lib.rs  mpeg_ts.rs
src/: app.rs  lib.rs  main.rs  manager.rs  tray.rs
