[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/capture",
    "crates/chromecast",
    "crates/dial",
    "crates/airplay",
    "crates/miracast", "crates/encoder", "crates/m3u8", "crates/muxer", "crates/hls"
]

[workspace.dependencies]
ferricast-core = { path = "crates/core" }
ferricast-capture = { path = "crates/capture" }
ferricast-chromecast = { path = "crates/chromecast" }
ferricast-dial = { path = "crates/dial" }
ferricast-airplay = { path = "crates/airplay" }
ferricast-miracast = { path = "crates/miracast" }
ferricast-encoder = { path = "crates/encoder" }
ferricast-m3u8 = { path = "crates/m3u8" }
ferricast-muxer = { path = "crates/muxer" }
ferricast-hls = { path = "crates/hls" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

[package]
name = "ferricast"
version = "0.1.0"
edition = "2024"
description = "Unified screen and video streaming for Linux"

[dependencies]
ferricast-core.workspace = true
ferricast-capture.workspace = true
ferricast-chromecast.workspace = true
ferricast-dial.workspace = true
ferricast-airplay.workspace = true
ferricast-miracast.workspace = true
ferricast-encoder.workspace = true
ferricast-hls.workspace = true
freya = { version = "0.4.0-rc.11", features = ["icons", "router", "radio"] }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
traysys = { version = "0.1", path = "vendor/traysys" }
rustls = { version = "0.23", features = ["ring"] }
uuid.workspace = true
rust_cast = { version = "0.21.0", features = ["thread_safe"] }
libc = "0.2.186"
