[workspace]
resolver = "2"
members = [
    ".",
    "crates/core",
    "crates/capture",
    "crates/chromecast",
    "crates/dial",
    "crates/airplay",
    "crates/miracast",
    "crates/encoder",
    "crates/m3u8",
    "crates/muxer",
    "crates/hls",
    "crates/gui",
]

[workspace.dependencies]
ferricast = { path = ".", default-features = false }
ferricast-core = { path = "crates/core" }
ferricast-capture = { path = "crates/capture", default-features = false }
ferricast-chromecast = { path = "crates/chromecast" }
ferricast-dial = { path = "crates/dial" }
ferricast-airplay = { path = "crates/airplay" }
ferricast-miracast = { path = "crates/miracast" }
ferricast-encoder = { path = "crates/encoder" }
ferricast-m3u8 = { path = "crates/m3u8" }
ferricast-muxer = { path = "crates/muxer" }
ferricast-hls = { path = "crates/hls" }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
bytes = "1"
uuid = { version = "1", features = ["v4"] }

[package]
name = "ferricast"
version = "0.1.0"
edition = "2024"
description = "Unified screen and video streaming library for Linux"

[lib]
path = "src/lib.rs"

[features]
default = ["chromecast", "pipewire", "x11"]
chromecast = ["dep:ferricast-chromecast"]
# Capture backends — re-exported from `ferricast-capture`. At least
# one MUST be enabled; the capture crate emits a `compile_error!` if
# both are turned off.
pipewire = ["ferricast-capture/pipewire"]
x11 = ["ferricast-capture/x11"]
# Reserved for upcoming protocol crates; toggling on requires
# uncommenting the matching workspace member + dep below.
# dial = ["dep:ferricast-dial"]
# airplay = ["dep:ferricast-airplay"]
# miracast = ["dep:ferricast-miracast"]

[dependencies]
ferricast-core.workspace = true
# Capture's default features are turned off at the workspace level
# so the root's `pipewire`/`x11` features fully control which backends
# get compiled in. Otherwise turning off the root features wouldn't
# actually disable them — capture's own defaults would still pull
# them through.
ferricast-capture.workspace = true
ferricast-encoder.workspace = true
ferricast-hls.workspace = true
ferricast-chromecast = { workspace = true, optional = true }
# ferricast-dial = { workspace = true, optional = true }
# ferricast-airplay = { workspace = true, optional = true }
# ferricast-miracast = { workspace = true, optional = true }

tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
