[package]
name = "ferricast-capture"
version = "0.1.0"
edition = "2024"
description = "PipeWire and X11 screen capture for ferricast"

[features]
# Both backends on by default — match the historical behavior of the
# crate. Downstream callers that ship to a single environment (e.g.
# a Wayland-only desktop appliance) can opt out via
# `default-features = false` + the backend they want.
default = ["pipewire", "wlroots", "wayland-direct"]
pipewire = ["dep:ashpd", "dep:pipewire", "dep:libspa", "dep:ash"]

# wayland (window/monitor enumeration). "wlroots" is the historical
# name and stays for backward compat, but the backend now also
# supports the standard `ext-foreign-toplevel-list-v1` protocol —
# which means it works on niri, KDE Plasma 6, and any other modern
# compositor, not just wlr-protocols implementers.
wlroots = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr"]
# Wayland direct capture (no xdg-desktop-portal). Negotiates
# `zwp_linux_dmabuf_v1` with the compositor for GPU end-to-end
# capture via `ext-image-copy-capture-v1` or `wlr-screencopy v3`.
# Falls back to wl_shm only when the compositor refuses dmabuf.
# `libgbm` is needed at runtime for DMA-BUF allocation — ubiquitous
# (mesa ships it on every desktop Linux distribution).
wayland-direct = [
    "wlroots",
    "dep:gbm",
    "dep:drm-fourcc",
]

[dependencies]
ferricast-core.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
async-trait = { workspace = true }

libc = "0.2.183"

# Image encoding for thumbnails. `default-features = false` strips
# every codec except PNG, which is the only one the daemon hands
# back over D-Bus. Keeps capture's compile time + binary size in
# check on builds that don't want jpeg/webp/avif support.
image = { version = "0.25", default-features = false, features = ["png"] }

# wlroots enumerator backend
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }

# wayland-direct: DMA-BUF allocation via gbm + DRM fourcc constants.
gbm = { version = "0.18", default-features = false, features = ["drm-support"], optional = true }
drm-fourcc = { version = "2.2", optional = true }

# pipewire backend
ashpd = { version = "0.10", features = ["tokio"], optional = true }
pipewire = { version = "0.8", features = ["v0_3_77"], optional = true }
# `MODIFIER_FIXATION_REQUIRED` is gated behind libspa's own `v0_3_75`
# feature, which the `pipewire` crate doesn't pass through directly.
libspa = { version = "0.8", features = ["v0_3_75"], optional = true }

# Vulkan loader — used to import dmabuf frames from PipeWire and read
# them back to CPU memory. Optional at runtime: if `ash::Entry::load()`
# fails (no Vulkan loader / driver) the capture path falls back to
# SHM-only EnumFormat advertising.
ash = { version = "0.38", optional = true }
