[package]
name = "ferricast-chromecast"
version = "0.1.0"
edition = "2024"
description = "Chromecast (CASTv2) protocol for ferricast"

[dependencies]
ferricast-core.workspace = true
ferricast-hls.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "time", "macros"] }
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true
mdns-sd = "0.11"
ferricast-encoder.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = [
  "ring",
    "logging",
    "tls12",
] }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "prefer-post-quantum",
    "std",
    "tls12",
] }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webpki-roots = "0.26"
