[package]
name = "ferricast-decoder"
version = "0.1.0"
edition = "2024"
description = "Receiver-side decoders for ferricast (CPU H.264 + AAC; GPU paths follow)"

[features]
# Decoder backends.
#
# - `openh264-decode` — software H.264 decode. CPU only, always
#   works when compiled in. Today's only video backend; GPU paths
#   (`vaapi-decode`, `nvdec-decode`) are slotted into the facade's
#   auto-select chain in a follow-up — the shape is already there.
# - `aac` — pure-Rust AAC-LC decoder via symphonia. Audio decode is
#   CPU-bound across the board (no consumer driver exposes hardware
#   AAC decode), so one backend covers the receiver pipeline.
default = ["openh264-decode", "aac"]
openh264-decode = ["dep:openh264"]
aac = ["dep:symphonia"]
# Hardware H.264 decode via VA-API. Opt-in (not in defaults) until
# the slice-submission path is fully verified against a real
# bitstream test rig — until then `FERRICAST_H264_DECODE_BACKEND=vaapi`
# is the runtime escape hatch to engage it. Default-off keeps every
# build that turns this feature on at compile time from accidentally
# using a half-validated decode path.
vaapi-decode = ["dep:cros-libva", "dep:h264-reader"]

[dependencies]
ferricast-core.workspace = true
bytes.workspace = true
tracing.workspace = true

openh264 = { version = "0.9.3", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["aac"] }

# VA-API decode (opt-in). Same fork pin as the encoder so a single
# libva ABI version is in play across the workspace.
cros-libva = { git = "https://github.com/SergioRibera/cros-libva", branch = "fix/vp9-encpicparam-fields", optional = true }

# H.264 bitstream parser. Pure-Rust, no system deps. Used by the
# VA-API backend to decode SPS / PPS so the VA buffer construction
# has the bitstream-derived parameters it needs.
h264-reader = { version = "0.7", optional = true }
