[package]
name = "ferricast-dial"
version = "0.1.0"
edition = "2024"
description = "DIAL protocol for ferricast"

[dependencies]
ferricast-core.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync"] }
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
uuid.workspace = true

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = { version = "0.7", features = ["net"] }
url = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
