[package]
name = "ferricast-encoder"
version = "0.1.0"
edition = "2024"

[features]
# Encoder backends, each gated behind its own feature so a build
# can opt out of any combination. At least one H.264 backend MUST
# be enabled — `lib.rs` emits a `compile_error!` when all three
# are off, since the H.264 facade has nothing to dispatch to.
#
# - `x264` — software fallback, always available at runtime.
#             The only path with no system-library coupling that
#             fails outside its compatible version window.
# - `vaapi` — Intel iGPU / AMD Mesa hardware encode via cros-libva.
#             cros-libva pins to a specific libva ABI; bump the
#             fork rev when libva moves and bindgen output diverges.
# - `nvenc` — NVIDIA hardware encode via shiguredo_nvcodec.
#             Loads libcuda + libnvidia-encode at runtime; missing
#             libraries make `probe()` fall through to the next
#             backend at runtime.
# - `fdk-aac` — AAC-LC via libfdk-aac. Off → the AAC facade
#             routes everything to the pure-Rust oxideav-aac
#             fallback (always compiled in).
#
# Disable any one you can't build on a particular host. Typical
# fix for cros-libva ABI mismatches:
#   ferricast = { default-features = false, features = ["x264", "nvenc", "fdk-aac"] }
default = ["x264", "vaapi", "nvenc", "fdk-aac"]
x264 = ["dep:x264"]
vaapi = ["dep:cros-libva"]
nvenc = ["dep:shiguredo_nvcodec"]
# HEVC (H.265) encode through NVENC. Builds on top of `nvenc` — the
# generic `NvencEncoder<C>` carries the HEVC codec marker behind this
# gate so a non-HEVC build doesn't compile the HEVC `CodecConfig`
# mapping. Off by default because the H.265 facade (where this gets
# routed through) is opt-in.
nvenc-hevc = ["nvenc"]
# HEVC (H.265) encode through VA-API (Intel / AMD). Builds the
# packed VPS/SPS/PPS NAL writers and the HEVC parameter-buffer setup
# on top of `vaapi`. Off by default, behind the same opt-in gate as
# `nvenc-hevc` so the H.265 facade can be enabled without forcing
# both hardware paths to compile.
vaapi-hevc = ["vaapi"]
fdk-aac = ["dep:fdk-aac"]

# Zero-copy DMA-BUF input on NVENC. Requires a forked
# `shiguredo_nvcodec` that exposes `Encoder::register_external_dmabuf`
# + `Encoder::encode_external` (the upstream crate keeps those
# `pub(crate)`). Without the fork, NVENC stays on the CPU path
# (Vulkan readback + libcuda HtoD) which still works on every
# NVIDIA GPU — just not zero-copy.
#
# Toggle on with `--features nvenc-zero-copy` once `Cargo.toml`
# points `shiguredo_nvcodec` at a fork that publishes the two
# methods.
nvenc-zero-copy = ["nvenc"]

[dependencies]
ferricast-core.workspace = true
bytes.workspace = true
tracing.workspace = true



# VA-API binding without ffmpeg. Used to encode H.264 directly on
# the GPU when the system has a VA-API driver. Loaded at runtime;
# missing `libva.so` makes the encoder gracefully fall back to openh264.
#
# The fork is pinned to a specific rev because cros-libva regenerates
# bindings from libva headers — newer libva versions add fields that
# the pinned bindgen output doesn't know about, breaking compile on
# rolling-release distros. Bump the rev when libva on your target
# distro moves; until then `--no-default-features --features "openh264,nvenc"`
# is the escape hatch.
cros-libva = { git = "https://github.com/SergioRibera/cros-libva", branch = "fix/vp9-encpicparam-fields", optional = true }

# NVENC (NVIDIA hardware H.264 encode). Higher-level Rust binding
# that wraps the Video Codec SDK headers — no SDK install needed at
# build time, the libraries (libcuda.so, libnvidia-encode.so) are
# dlopen'd at runtime. Missing libs cause `Encoder::new` to error
# and the factory falls back through VA-API / openh264.
shiguredo_nvcodec = { version = "2026.1.0", optional = true }

# AAC-LC encoder via libfdk-aac. Picked over a pure-Rust path
# because no production-grade AAC encoder exists in Rust and the
# chromecast HLS pipeline requires AAC-LC inside MPEG-TS. The crate
# links against the system `libfdk-aac` (`libfdk-aac-dev` on
# Debian/Ubuntu, `fdk_aac` on Nix); flake.nix lists it under
# `libraries` so the dev shell has it on the link path.
#
# Optional, on by default. Disable with `--no-default-features` to
# build without libfdk-aac — the runtime falls back to the pure-Rust
# `oxideav-aac` encoder below. We keep fdk-aac as the preferred path
# because Fraunhofer's encoder is universally regarded as the
# reference AAC implementation; oxideav-aac is the fallback for
# environments where pulling in the C library is impractical.
fdk-aac = { version = "0.8", optional = true }
x264 = { version = "0.5.0", optional = true }
